5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1590_2894.log
== TEST (2019-03-31 08:31:19) 
-- CODE:
total= var*8+45
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    total= var*8+45
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 08:32:56) 
-- CODE:
Var= float(input("resultado"))

total= var*8+45
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total= var*8+45
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 08:35:05) 
-- CODE:
Var= float(input("total"))

total= var*8+45
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total= var*8+45
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 08:35:11) 
-- CODE:
Var= float(input("total"))

total = var*8+45
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = var*8+45
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 08:38:56) 
-- CODE:
Var= float (input("resultado"))

total = var* 8 + 45
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = var* 8 + 45
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 08:39:16) 
-- CODE:
Var= float (input("resultado"))

total = var * 8 + 45
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = var * 8 + 45
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 08:39:59) 
-- CODE:
Var = float (input("resultado"))

total = var * 8 + 45
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = var * 8 + 45
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 08:41:30) 
-- CODE:
Var = float (input("resultado"))

total = 7 * 8 + 45
print(total)
-- OUTPUT:
101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 08:41:49) 
-- CODE:
Var = float (input("resultado"))

total = var *8 + 45
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = var *8 + 45
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 08:42:07) 
-- CODE:
var = float (input("resultado"))

total = var *8 + 45
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 08:42:17) 
-- CODE:
var = float (input("resultado"))

total = var *8 + 45
print(total)
-- EXECUTION TIME:
0.114893
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 08:43:41) 
-- CODE:
var = float (input("resultado"))

total = var *8 + 45
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 08:44:03) 
-- CODE:
var = float (input("preço ="))

total = var *8 + 45
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 08:44:11) 
-- CODE:
var = float (input("preço"))

total = var *8 + 45
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 08:44:25) 
-- CODE:
var = float (input("resultado"))

total = var *8 + 45
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 08:44:36) 
-- CODE:
var = float (input("resultado"))

total = var *8 + 45
print(total)
-- EXECUTION TIME:
0.125623
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 08:48:50) 
-- CODE:
var = float (input("valor:"))

total = var *8 + 45
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 08:49:02) 
-- CODE:
var = float (input("valor:"))

total = var *8 + 45
print(total)
-- EXECUTION TIME:
0.230516
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 10:08:24) 
-- CODE:
var = float (input("valor:"))

total = var *8 + 45
print(total)
-- EXECUTION TIME:
0.121413
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 10:12:37) 
-- CODE:
var=input("valor:")

print(var)

print(var*8+45)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(var*8+45)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 10:12:47) 
-- CODE:
var=input("valor:")

print(var*8+45)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var*8+45)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 10:15:22) 
-- CODE:
var= float(input("valor:"))

total=var*8+45
print(total)
-- EXECUTION TIME:
0.19892
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
valor:54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
valor:2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
valor:991941.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 10:15:24) 
-- CODE:
var= float(input("valor:"))

total=var*8+45
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 10:15:33) 
-- CODE:
var= float(input("valor:"))

total=var*8+45
print(total)
-- EXECUTION TIME:
0.116468
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
